# flight-search-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  FLIGHT_ANALYSIS_AUTOMATION_GUIDE.md  LICENSE  MCP_INTEGRATION_GUIDE.md  MCP_SERVER_GUIDE.md  README.md  RESTRUCTURING_SUMMARY.md  TESTING_GUIDE.md  config.py  example.py  install.py  main.py  mcp_server.py  mcp_server_simple.py  pyproject.toml  pytest.ini  requirements.txt  run_mcp_server.py  scraper.py  setup.py  test_package_structure.py  test_scraper.py  utils.py  verify_installation.py
.github/workflows/: test.yml
examples/: mcp_client_example.py
flight_scraper/: __init__.py  utils.py
flight_scraper/cli/: __init__.py  main.py
flight_scraper/core/: __init__.py  browser_manager.py  config.py  data_extractor.py  form_handler.py  models.py  scraper.py
flight_scraper/mcp/: __init__.py  server.py
tests/: __init__.py  conftest.py
tests/diagnostics/: __init__.py  test_selector_diagnostics.py
tests/integration/: __init__.py  test_robust_selectors.py  test_scraper_integration.py
tests/unit/: __init__.py  test_browser_manager.py  test_cli_main.py  test_config.py  test_data_extractor.py  test_error_scenarios.py  test_form_handler.py  test_mcp_server.py  test_models.py  test_scraper.py  test_selectors.py  test_utils.py
